# datatrails-samples

./: .gitignore  CODE_OF_CONDUCT.md  DEVELOPERS.md  Dockerfile  Dockerfile-api  LICENSE  MANIFEST.in  README.md  Taskfile.yml  pylintrc  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
archivist_samples/: .gitignore  __init__.py  archivist.py  constants.py
archivist_samples/c2pa/: README.md  c2pa.py  main.py  run.py
archivist_samples/c2pa/c2pa_files/: __init__.py  detailed.json  edited_signed_image.c2pa  info.txt  ingredient.json  manifest_store.json  parent_signed_image.c2pa  signed_image.c2pa
archivist_samples/document/: README.md  __init__.py  __main__.py  document.py  run.py
archivist_samples/document/document_files/: __init__.py
archivist_samples/door_entry/: README.md  __init__.py  __main__.py  main.py  run.py
archivist_samples/door_entry/images/: __init__.py
archivist_samples/door_entry/images/assets/: __init__.py
archivist_samples/door_entry/images/events/: __init__.py
archivist_samples/estate_info/: README.md  __init__.py  __main__.py  main.py
archivist_samples/nuclear/: __init__.py  __main__.py  main.py  nuclear.py  run.py
archivist_samples/nuclear/nuclear_files/: __init__.py
archivist_samples/sample_scripts/c2pa/: README.md  c2pa_verify.py
archivist_samples/sample_scripts/c2pa/sample/: 4bad_definition.json  4definition.json  __init__.py  bad_definition.json  definition.json
archivist_samples/sbom_document/: README.md  __init__.py  main.py  run.py  software_package.py
archivist_samples/sbom_document/sbom_files/: __init__.py
archivist_samples/signed_records/: README.md  __init__.py  __main__.py  main.py
archivist_samples/software_bill_of_materials/: README.md  __init__.py  __main__.py  main.py  run.py  sbom_advanced_demo.py  sbom_demo.py  software_deployment.py  software_package.py
archivist_samples/software_bill_of_materials/attachments/: v4_1_5_sbom.xml  v4_1_6_1_sbom.xml
archivist_samples/software_bill_of_materials/sbom_files/: __init__.py  v4_1_6_sbom.xml  v4_1_7_sbom.xml  v5_0_0_sbom.xml
archivist_samples/synsation/: README.md  __init__.py  __main__.py  analyze.py  charger.py  device_worker.py  ev_charger_device.py  initialise.py  jitsuinator.py  main.py  maintenance_worker.py  patch_worker.py  qualifications.py  recall_worker.py  simulator.py  synsation_corporation.py  synsation_industries.py  synsation_manufacturing.py  synsation_smartcity.py  util.py  wanderer.py
archivist_samples/synsation/images/: __init__.py
archivist_samples/synsation/images/assets/: __init__.py
archivist_samples/synsation/locations/: __init__.py  grayslake.yaml
archivist_samples/testing/: __init__.py  accesscontrol.py  archivist.py  archivist_parser.py  asset.py  assets.py  constants.py  locations.py  logger.py  namespace.py  parser.py  time_warp.py
archivist_samples/wipp/: README.md  __init__.py  __main__.py  main.py  run.py  wipp.py
archivist_samples/wipp/wipp_files/: __init__.py
samples/: .gitignore
samples/door_entry/: __main__.py  run.py
samples/estate_info/: __init__.py  __main__.py
samples/signed_records/: __main__.py
samples/synsation/: __init__.py  __main__.py  analyze.py  charger.py  device_worker.py  ev_charger_device.py  initialise.py  jitsuinator.py  maintenance_worker.py  patch_worker.py  synsation_corporation.py  synsation_smartcity.py  util.py  wanderer.py
samples/synsation/locations/: asia.yaml  baltimore.yaml  european.yaml  za.yaml
samples/testing/: __init__.py
scripts/: api.sh  functests.sh  samples.sh  version.sh
