[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E713, E722, E741, W504, W503
statistics = True
max-line-length = 88

[metadata]
name = jitsuin-archivist-samples
author = RKVST Inc.
author_email = support@rkvst.com
description = RKVST Examples
long_description = file: README.md
url = https://github.com/jitsuin-inc/archivist-samples
license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Utilities

project_urls =
    Source = https://github.com/jitsuin-inc/archivist-samples
    Tracker = https://github.com/jitsuin-inc/archivist-samples/issues

[options]
install_requires = file: requirements.txt
packages = archivist_samples
platforms = any
python_requires = >=3.7
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts =
    archivist_samples_door_entry = archivist_samples.door_entry.main:main
    archivist_samples_estate_info = archivist_samples.estate_info.main:main
    archivist_samples_signed_records = archivist_samples.signed_records.main:main
    archivist_samples_synsation = archivist_samples.synsation.main:main
    archivist_samples_sbom = archivist_samples.software_bill_of_materials.main:main
    archivist_samples_wipp = archivist_samples.wipp.main:main

[bdist_wheel]
universal = 1
