[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E713, E722, E741, W504, W503
statistics = True
max-line-length = 88

[metadata]
name = datatrails-samples
author = DataTrails Inc.
author_email = support@datatrails.ai
description = DataTrails Examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/datatrails/datatrails-samples
license = MIT
license_files = LICENSE

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Topic :: Utilities

project_urls =
    Source = https://github.com/datatrails/datatrails-samples
    Tracker = https://github.com/datatrails/datatrails-samples/issues

[options]
install_requires = file: requirements.txt
packages = 
    archivist_samples
    archivist_samples/testing
    archivist_samples/c2pa
    archivist_samples/c2pa.c2pa_files
    archivist_samples/document
    archivist_samples/document.document_files
    archivist_samples/door_entry
    archivist_samples/door_entry.images
    archivist_samples/door_entry.images.assets
    archivist_samples/door_entry.images.events
    archivist_samples/estate_info
    archivist_samples/signed_records
    archivist_samples/software_bill_of_materials
    archivist_samples/software_bill_of_materials.sbom_files
    archivist_samples/sbom_document
    archivist_samples/sbom_document.sbom_files
    archivist_samples/synsation
    archivist_samples/synsation.images
    archivist_samples/synsation.images.assets
    archivist_samples/synsation.locations
    archivist_samples/wipp
    archivist_samples/wipp.wipp_files

include_package_data = True
platforms = any
python_requires = >=3.9
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts =
    archivist_samples_c2pa = archivist_samples.c2pa.main:main
    archivist_samples_document = archivist_samples.document.main:main
    archivist_samples_door_entry = archivist_samples.door_entry.main:main
    archivist_samples_estate_info = archivist_samples.estate_info.main:main
    archivist_samples_signed_records = archivist_samples.signed_records.main:main
    archivist_samples_synsation = archivist_samples.synsation.main:main
    archivist_samples_software_bill_of_materials = archivist_samples.software_bill_of_materials.main:main
    archivist_samples_sbom_document = archivist_samples.sbom_document.main:main
    archivist_samples_wipp = archivist_samples.wipp.main:main

[bdist_wheel]
universal = 1
